# simulatedmicroscopy-reader

./: .gitignore  LICENSE  README.md
simulatedmicroscopy-reader/: setup.cfg
simulatedmicroscopy-reader/simulatedmicroscopy_reader/: __init__.py  napari.yaml
