[metadata]
name = simulatedmicroscopy-reader
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    simulatedmicroscopy @ git+https://github.com/rhoitink/simulatedmicroscopy@main#egg=simulatedmicroscopy
    napari

[options.entry_points]
napari.manifest =
    custom-h5-reader = simulatedmicroscopy_reader:napari.yaml
